--- a/Self-Development/The Miracle Morning/06.md
+++ b/Self-Development/The Miracle Morning/06.md
@@ -9,4 +9,4 @@
 - In order to save your Level 10 life from being neglected and limited by the demands of your life situation - which ultimately leads to a life of regret, unfulfilled potential, and even mediocrity - you must prioritize and dedicate time each day to your personal development.
 - Remember, when you change your inner world - your life - then your outer world - your life situation - will improve in parallel.
 
-[[Day-07, Silence]]
+[[07, Silence]]
