--- a/Self-Development/The Miracle Morning/03.md
+++ b/Self-Development/The Miracle Morning/03.md
@@ -17,4 +17,4 @@
 - Personal Insight: The environment, people where we spend our time with, really matters in our growth. We become like the average of the 5 people we spend the most time with.
 
 
-[[04]]
+[[Books/Self-Development/The Miracle Morning/04]]
