--- a/Self-Development/The Miracle Morning/05.md
+++ b/Self-Development/The Miracle Morning/05.md
@@ -9,4 +9,4 @@
 - The first key to waking up is to remember this : Your first thought in the morning is usually the last thought you had before you went to bed. For example, we have all had nights where we could hardly fall asleep because we are so excited about waking up the next morning. Whether it was Christmas eve, the night before your birthday, your first day of school, starting a new job, or going on vacation - as soon as the alarm clock sounds, you open your eyes with enthusiasm and excitement to get out of bed and embrace the day!  On the other hand, if your last thought before bed was something like, I can't believe I have to get up in 6 hours, I am going to be exhausted in the morning!. Then your first thought when the alarm clock goes off is likely along the lines of, 'Oh my gosh, it's already been 6 hours? Nooo! I just want to keep sleeping.  
 
 - So the key is to consciously decide every night to actively and mindfully create a positive expectation for the next morning.
-[[06]]
+[[Books/Self-Development/The Miracle Morning/06]]
