--- a/Self-Development/The Miracle Morning/14.md
+++ b/Self-Development/The Miracle Morning/14.md
@@ -1,4 +1,4 @@
-- Humans need variety. It's important that you keep your Miracle Morning feeling fresh and new.
+-  Humans need variety. It's important that you keep your Miracle Morning feeling fresh and new.
 
 - Whenever we complained about our work getting boring, 'Whose fault is it that it's boring? And whose responsibility is it to make it fun again?'. Whether it's our routines or our relationships, it's our responsibility to actively and continuously make them the way we want them to be.
 
@@ -19,4 +19,15 @@
 #### Day [ 1 - 10 ] Phase One: Unbearable
 - The first 10 days of implementing any new habit, or ridding yourself of any old habit, can feel almost unbearable. Although the first few days can be easy, and even exciting - because it is something new  as soon as the newness wears off, reality sets in. You hate it. It is painful. It is not fun anymore. Every fibre of your being tends to resist and reject the change. Your mind rejects it and you think: I hate this. Your body resists it and tells you : I don't like how this feels.
 
-- When you are prepared for these first 10 days, when you know that it is the price you pay for success, that the first 10 days will challenging but they are also temporary, you can beat the odds and succeed! If the benefits are great enogh we can do anything for 10 days, right?
+- When you are prepared for these first 10 days, when you know that it is the price you pay for success, that the first 10 days will challenging but they are also temporary, you can beat the odds and succeed! If the benefits are great enogh we can do anything for 10 days, right? 
+
+#### Day [ 11 - 20 ] Phase Two: Uncomfortable
+- While days 11-20 are note unbearable, they are still uncomfortable and will require discipline and commitment on your part. At this stage it will still be tempting to fall back to your old behaviours. 
+
+- Stay commited. You have already gone from unbearable to uncomfortable, and you are about to find out what it fees like to be UNSTOPPABLE.
+
+#### Day [ 21 - 30 ] Phase Three: Unstoppable
+- The final 10 days is where you positively reinforce and associate pleasure with our new habit. You have been primarily associating pain and discomfort with it during the first 20 days. Instead hating and resisting your new habit, you start feeling proud of yourself for making it this far.
+
+- Too many people get overly confident, pat themselves on the back and think: I've done it for 20 days so I am just going to take a few days off. The problem is that those first 20 days are the most challenging part of the process Taking a few days off before you have invested the necessary time into positively reinforcing the habit makes it difficult to get back on. It is days 21-30 where you really start enjoying the habit, which is what will make you continue it in the future.
+[[15]]
