--- a/Self-Development/The Miracle Morning/04.md
+++ b/Self-Development/The Miracle Morning/04.md
@@ -18,4 +18,4 @@
 
 - Personal Insight: Find the purpose of our life and inject that into our brain. If we have a mission each day, then we automatically wake up on time and do the stuff, we don't even need an alarm.
 
-[[05]]
+[[Books/Self-Development/The Miracle Morning/05]]
